--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "astro": "^5.13.4",
+    "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "survey-core": "^2.3.4",
+    "survey-creator-core": "^2.3.4",
+    "survey-creator-react": "^2.3.4",
     "tailwindcss": "^4.1.12"
   }
 }
